Test/service_cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-app
